# python-project-template

./: .dockerignore  .pre-commit-config.yaml  404.html  README.md  docker-compose.test.yml  index.html  mkdocs.yml  sitemap.xml
.github/: copilot-instructions.md  dependabot.yml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: build-docker.yml  ci.yml  documentation.yml  publish.yml
CONTRIBUTING/: index.html
DEVELOPMENT_PHILOSOPHY/: index.html
DOCUMENTATION_README/: index.html
LOCAL_DEVELOPMENT_DEPENDENCIES/: index.html
SHARED_LIBRARY_VERSIONING/: index.html
apps/: README.md
apps/example-app/: Dockerfile  README.md  pyproject.toml
apps/example-app/app/: __init__.py  main.py
apps/example-app/tests/: test_main.py
docs-src/: DOCUMENTATION_README.md  LOCAL_DEVELOPMENT_DEPENDENCIES.md  SHARED_LIBRARY_VERSIONING.md
feature-request-automation/: index.html
libs/: README.md
libs/example-lib/: README.md  pyproject.toml
libs/example-lib/example_lib/: __init__.py  greet.py
libs/example-lib/tests/: test_greet.py
meta/adr/: ADR-002-use_python312.md  ADR-003-use_poetry.md  ADR-004-use_pytest.md  ADR-005-use_ruff.md  ADR-006-use_docker.md  ADR-007-monorepo_apps_structure.md  ADR-008-json_logging.md  ADR-008-monorepo_apps_structure.md  ADR-009-shared_library_versioning.md  ADR-010-use_tenacity.md  ADR-011-use_click.md  ADR-012-use_mkdocs.md  ADR-013-piwheels_arm_builds.md  ADR-014-cicd_strategy.md  ADR-015-json_logging.md  ADR-016-shared_library_versioning.md  ADR-021-use_tenacity.md  ADR-022-use_click.md  ADR-023-use_mkdocs.md  ADR-029-piwheels_arm_builds.md
scripts/: local-ci-check.sh  setup-local-deps.py
search/: search_index.json
templates/python-app-template/: cookiecutter.json
templates/python-app-template/{{cookiecutter.app_name}}/: README.md  pyproject.toml
templates/python-app-template/{{cookiecutter.app_name}}/tests/: test_main.py
templates/python-app-template/{{cookiecutter.app_name}}/{{cookiecutter.package_name}}/: main.py
templates/python-lib-template/: cookiecutter.json
templates/python-lib-template/{{cookiecutter.lib_name}}/: README.md  pyproject.toml
templates/python-lib-template/{{cookiecutter.lib_name}}/tests/: test_placeholder.py
testing/: README.md
