[tool.poetry]
name = "example-app"
version = "0.1.0"
description = "Example application demonstrating the monorepo app pattern"
authors = ["{{GITHUB_OWNER}}"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1"
example-lib = { path = "../../libs/example-lib", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
ruff = "^0.15"

[tool.poetry.scripts]
example-app = "app.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
